[gd_scene load_steps=2 format=3 uid="uid://c2s0van35oqjc"]

[ext_resource type="Script" path="res://UI/main_menu/main_menu.gd" id="1_boy32"]

[node name="main_menu" type="CanvasLayer"]
script = ExtResource("1_boy32")

[node name="main_main_menu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="play_button" type="Button" parent="main_main_menu"]
layout_mode = 2
text = "Play"

[node name="settings_button" type="Button" parent="main_main_menu"]
layout_mode = 2
text = "Settings
"

[node name="profile_button" type="Button" parent="main_main_menu"]
layout_mode = 2
text = "Profile
"

[node name="exit_button" type="Button" parent="main_main_menu"]
layout_mode = 2
text = "Exit
"

[node name="level_selection_map" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="quit_map_button" type="Button" parent="level_selection_map"]
layout_mode = 0
offset_left = 1075.0
offset_top = 602.0
offset_right = 1139.0
offset_bottom = 633.0
text = "<<Back"

[connection signal="pressed" from="main_main_menu/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="level_selection_map/quit_map_button" to="." method="_on_quit_map_button_pressed"]
